Process Hacker

1.3.9.0
 * NEW/IMPROVED:
   * Kernel-mode stack traces
   * POSIX process support, including command lines and 
     highlighting
   * Hidden processes scanner can now detect FUTo
   * Ability to set DEP status of processes in other sessions
   * Automatic tree text coloring, allowing for dark highlighting 
     colors
 * FIXED:
   * Broken system thread start addresses due to sign-extending 
     instead of zero-extending pointers
   * Broken Ctrl+A for memory, results, and PE lists
   * Removed several annoying thread-related warnings
   * Network connections now display process IDs

1.3.8.5
 * NEW/IMPROVED:
   * Full support for Windows Vista SP2
   * Users/sessions list
   * Window process finder
   * Thread wait analysis - right-click a thread and choose 
     Analyze > Wait to see what a thread is hanging on
   * Added ability to create dump files for processes
   * Added ability to detach processes from debuggers
   * Added "scroll down process tree on startup" option
   * Notification icon process list is now sorted
   * Lists are dramatically faster (especially the handle list)
   * Detailed handle properties
   * Event objects can now be modified - set, clear, pulse, reset
   * Event pair objects can now be modified - set high, set low
   * Semaphore objects can now be modified - acquire, release
   * Statistics for token objects
   * Token object names now include their session LUIDs
   * Added Shift+Del for Terminate Process Tree
 * FIXED:
   * #2795871 - "Hidden Processes window resizing problem"
   * #2800710 - "System.ObjectDisposedException"
   * Windows 7 RC BSOD (Windows 7 Beta is no longer supported) at
     startup; support is STILL EXPERIMENTAL
   * Memory search addresses being in decimal
   * Disabling "Warn about dangerous actions" now disables all 
     process-related prompts
   * Terminator window would be hidden if the main window was top-most
   * Using the keyboard (Up/Down/Left/Right) in the process list was fixed