@@ -2419,7 +2419,19 @@ namespace ProcessHacker.Native.Api
             [Out] StringBuilder str, 
             int maxCount
             );
-
+        [DllImport("user32.dll", SetLastError = true, CharSet = CharSet.Unicode)]
+        public static extern bool IsHungAppWindow(
+            [In] IntPtr hwnd
+            );
+        [DllImport("user32.dll", SetLastError = true, CharSet = CharSet.Unicode)]
+        public static extern bool IsWindow(
+            [In] IntPtr hwnd
+            );
+        [DllImport("user32.dll", SetLastError = true, CharSet = CharSet.Unicode)]
+        public static extern bool IsWindowVisible(
+            [In] IntPtr hwnd
+            );
+        //IsWindowVisible
         #endregion
     }
 }
